style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');


* {
    box-sizing: border-box;
}

h2 {
    text-align: center;
    margin: 0;
}


body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #FFFFFF;
    color: #020817;
    margin: 0;
    padding: 0;
}
.container {
    width: 90%;
    max-width: auto;
    margin: auto;
}
.navbar-container {
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
    background-color: white;
    padding: 20px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    position: fixed;
    width: 100%;
}

.navbar {
    width: 1700px;
    display: flex;
    justify-content: space-between;
}

.navbar-left {
    display: flex;
}

.navbar-right {
    display: flex;
}

#nav-name {
    font-size: 20px;
    font-weight: bold;
    color: #2563EB;
}

.navbar a {
    text-decoration: none;
    color: #020817;
    font-weight: bold;
    margin: 0 10px;
}

.navbar a:hover {
    color: #2563EB;
    text-decoration: underline;
}


.hero {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 100vh;
}
.hero-text {
    font-size: 2.5rem;
    font-weight: bold;
}
.hero-text span {
    color: #2563EB;
}

.hero p {
    font-size: 1.5rem;
}

.header-buttons {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.about {
    margin-top: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
    flex-wrap: wrap;
}


.about-left { 
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    min-width: 300px;
    max-width: 500px;
}

.img-container {
    display: flex;
    justify-content: flex-end;
}

.about-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 2;
    min-width: 450px;
    max-width: 700px;
    text-align: left;
    gap: 15px;
}


.about-left img{
    width: 100%;
    max-width: 250px;
    height: auto;
    border-radius: 50%; /* Makes the image round */
    border: 5px solid #2563EB;
    object-fit: cover; 
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.about-right h3 {
    margin-top: 20px;
    margin-bottom: 5px;
}

.about-right p {
    margin: 0;
    line-height: 1.6;
}



.about-right p, .about-right h2 {
    text-align: left;
}

#school {
    color: #64748B
}

.skills-container {
    background-color: #F1F5F9;
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 75px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

}

.skills-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    grid-template-columns: repeat(10, 1fr);
    gap: 100px;
    margin-top: 40px;
    justify-content: center;
    max-width: 900px;
}

.skill-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    border-radius: 10px;
    transition: transform 0.3s ease-in-out;
}

.skill-item:hover {
    transform: translateY(-8px);
}

.skill-item img {
    width: 50px;
    height: 50px;
    object-fit: contain;
    transform: translateY(-8px);

}

.skill-item p {
    font-size: 14px;
    color: #020817;
    font-weight: bold;
}

.experience-container {
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.experience-card {
    padding: 20px;
    margin-top: 20px;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    max-width: none;
    display: flex;
    flex-direction: column;
    gap: 10px;
    border-left: 5px solid #2563EB;
    transition: transform 0.3s ease-in-out;
}

.experience-card:hover {
    transform: translateX(8px);
}

.experience-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: left;
}

.experience-title {
    margin: 0;   
}

.experience-date {
    background: #F1F5F9;
    padding: 5px 10px;
    margin: 0;
    font-size: 10px;
    border-radius: 20px;
    font-weight: bold;
    align-self: flex-start;

}

.experience-description {
    font-size: 14px;
    line-height: 1.6;
    text-align: left;
}

.experience-role  {
    color: #64748B;
}

.project-container {
    text-align: center;
}

.projects-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 20px;
    max-width: 100%;
    overflow-x: auto;
    margin-top: 40px;
}

.project-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1 1 30%;
    border-radius: 10px;
    gap: 10px;
    padding-bottom: 15px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    max-width: 400px;   
    text-align: left;
    margin-top: 20px;
    transition: transform 0.3s ease-in-out;
}

.project-card:hover {
    transform: translateY(-8px);
}

.project-content {
    flex-grow: 1;
    justify-content: space-between;
}

.project-card img {
    width: 100%;
    height: 250px;
    object-fit: cover;
    border-radius: 10px 10px 0 0;
}

.project-title {
    margin-left: 20px;
}

.project-description {
    margin: 0 20px 15px 20px;
}

.tech-badge{
    background: #F1F5F9;
    padding: 5px 10px;
    margin: 0;
    font-size: 10px;
    border-radius: 20px;
    font-weight: bold;
    display: inline-block;
    margin-left: 20px;
}

.project-button {
    display: flex;
    justify-content: space-between;
    margin: 10px 20px 0 20px;
}

.contact-container {
    max-width: auto;
    margin: 5px 0;
    padding: 20px;
    background: white;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    text-align: center
}


.contact-form {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 20px;
}

.form-row {
    display: flex;
    gap: 15px;
}

.form-row .form-group {
    flex: 1;
}

.form-group {
    display: flex;
    flex-direction: column;
    gap: 5px;
    text-align: left;
}

.form-control {
    width: 100%;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
    font-size: 14px;
}

textarea.form-control {
    width: 100%;
    max-width: 100%;
    resize: vertical;
}





.btn {
    display: inline-block;
    padding: 10px 20px;
    margin: 10px;
    border-radius: 5px;
    text-decoration: none;
    font-weight: bold;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

}
.btn-primary {
    background-color: #2563EB;
    color: white;
}

.btn-primary:hover {
    background-color: #3672f3;
}
.btn-outline {
    border: 1px solid #64748B;
    color: #020817;
}

.btn-outline:hover {
    background-color: #F1F5F9;
}


.section {
    padding: 60px 0;
    text-align: center;
    margin-left: 200px;
    margin-right: 200px;
}
.skills-container, .contact-container {
    background-color: #F1F5F9;
    padding: 40px;
    border-radius: 5px;
}
.footer {
    color: white;
    padding: 20px;
    text-align: center;
    font-size: 0.9rem;
    color: #64748B;
    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
}

footer a:hover {
    color: #4573d4;
    
}

/* Reveal Animation from Old Portfolio */
.revealable {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: all 0.5s ease;
  }

.active {
    transform: translateY(0px);
    opacity: 1;
  }

.float-hover {
    display: inline-block;
    transition: transform 0.3s ease-in-out;
}

